2012-08-10  Daiki Ueno <ueno@unixuser.org>

	* auth-source.el: (auth-source-plstore-search)
	(auth-source-secrets-search): Ignore :require and :type in search spec.

2012-08-06  Julien Danjou  <julien@danjou.info>

	* nnimap.el (nnimap-request-head): Resture to-buffer parameter, used by
	`nnimap-request-move-article'.

	* gnus-demon.el (gnus-demon-add-handler, gnus-demon-remove-handler):
	Remove autoload, already handled by gnus.el.

	* nnimap.el (nnimap-request-head): Remove to-buffer argument.

	* gnus-int.el (gnus-request-head): Remove to-buffer argument, only
	supported by nnimap actually. Reverts previous change.

	* gnus-int.el (gnus-request-head): Add an optional to-buffer parameter
	to mimic `gnus-request-article' and enjoy backends the nn*-request-head
	to-buffer argument that is already supported.

2012-08-05  Julien Danjou  <julien@danjou.info>

	* gnus-demon.el (gnus-demon-add-handler, gnus-demon-remove-handler):
	Add autoload.

2012-07-31  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus.el (gnus-valid-select-methods): Fix custom type.

2012-07-29  Teodor Zlatanov  <tzz@lifelogs.com>

	* auth-source.el (auth-sources, auth-source-backend-parse)
	(auth-source-macos-keychain-search)
	(auth-source-macos-keychain-search-items)
	(auth-source-macos-keychain-result-append)
	(auth-source-macos-keychain-create): Support Mac OS X Keychains in
	auth-source.el through the /usr/bin/security utility.
	(auth-sources): Fix syntax error.
	(auth-source-macos-keychain-result-append): Fix variable name.
	(auth-sources, auth-source-macos-keychain-result-append): More fixes.

2012-07-27  Julien Danjou  <julien@danjou.info>

	* message.el (fboundp): Add a defalias on `mail-dont-reply-to' for
	Emacs < 24.1

2012-07-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* message.el (message-kill-address): Don't kill last newline.
	(message-skip-to-next-address): Don't move to the next header.
	(message-fill-field-address): Work properly.

2012-07-25  Julien Danjou  <julien@danjou.info>
