@@ -1,4 +1,9 @@
-2012-08-10  Daiki Ueno <ueno@unixuser.org>
+2012-08-10  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* gnus-agent.el (gnus-agent-cat-defaccessor, gnus-agent-cat-groups):
+	Use defsetf.
+
+2012-08-10  Daiki Ueno  <ueno@unixuser.org>
 
 	* auth-source.el: (auth-source-plstore-search)
 	(auth-source-secrets-search): Ignore :require and :type in search spec.
